--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,17 @@
         >
 
         <FrameLayout
-            android:id="@+id/fragment_container"
+            android:id="@+id/fragment_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"  />
+
+        <FrameLayout
+            android:id="@+id/fragment_detail"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            />
 
     </LinearLayout>
 
