--- a/app/src/main/res/layout/fragment_device_detail.xml
+++ b/app/src/main/res/layout/fragment_device_detail.xml
@@ -26,6 +26,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/disconnect_peer_button" />
+
+            <Button
+                android:id="@+id/btn_chat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/chat_button"
+                android:visibility="invisible" />
         </LinearLayout>
         <TextView
             android:id="@+id/device_address"
